Fix the diptych stylings on mobile in the health story

--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -272,21 +272,26 @@ nav {
     margin-top: 5%;
   
     .photo__diptych-container {
-      justify-content: space-evenly;
-      max-width: 78vw;
-      padding: 2% 0;
+      justify-content: space-between;
+      width: 45rem;
+      min-width: 50vw;
+      padding: 2% 0 0 0;
       align-items: flex-start;
       flex-wrap: wrap;
   
-      @media screen and (max-width: 1040px) {
+      @media screen and (max-width: 800px) {
         max-width: 90vw;
+        justify-content: space-evenly;
         flex-direction: column;
         align-items: center;
       }
   
       img {
-        // flex-basis: 50%;
-        max-width: 46%;
+        max-width: 70%;
+      }
+
+      img:first-of-type {
+        margin-bottom: 15px;
       }
     }
   
@@ -294,18 +299,20 @@ nav {
       width: 78vw;
   
       @media screen and (max-width: 1040px) {
-        width: 90vw;
+        width: 85vw;
       }
   
       p {
-        max-width: 100vw;
-        margin-left: 0;
+        width: 45rem;
+        min-width: 50vw;
+        margin: 0;
         font-style: italic;
         font-family: $font-photo-caption;
         font-size: 1rem;
   
         @media screen and (max-width: 1040px) {
           font-size: 0.8rem;
+          max-width: 85vw;
         }
       }
     }
